--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Wait for Postgres
         run: |
-          until pg_isready -h localhost -p 5432; do sleep 1; done
+          until pg_isready -h postgres -p 5432; do sleep 1; done
 
       - name: Run migrations
         env:
