--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,10 +49,10 @@ jobs:
           POSTGRES_PASSWORD: postgres
           
         options: >-
-          --health-cmd pg_isready
+          --health-cmd "pg_isready -U postgres"
           --health-interval 10s
           --health-timeout 5s
-          --health-retries 5
+          --health-retries 20
 
     steps:
       - name: Checkout code
@@ -65,10 +65,6 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r requirements.txt
-
-      - name: Wait for Postgres
-        run: |
-          until pg_isready -h postgres -p 5432; do sleep 1; done
 
       - name: Run migrations
         env:
