--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,8 @@ executing==2.2.0
 filelock==3.16.1
 Flask==3.0.3
 Flask-Cors==5.0.0
+Flask-Migrate==4.0
+Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 importlib_metadata==8.5.0
@@ -34,6 +36,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.19.1
 pytest==8.3.5
+python-dotenv==1.0
 SQLAlchemy==2.0.43
 stack-data==0.6.3
 tomli==2.2.1
