--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -5,9 +5,10 @@ name = "pypi"
 
 [packages]
 flask-sqlalchemy = "*"
-psycopg2-binary = "*"
 python-dotenv = "*"
 flask-jwt-extended = "*"
+flask-migrate = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
