--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,10 @@ name = "pypi"
 
 [packages]
 flask-cors = "*"
+flask = "*"
+flask-sqlalchemy = "*"
+flask-jwt-extended = "*"
+flask-migrate = "*"
 
 [dev-packages]
 
