--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,10 @@
+# Ignore Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+
 # Logs
 logs
 *.log
@@ -7,7 +14,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+node_modules/
 dist
 dist-ssr
 *.local
