--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,23 @@
 services:
   - type: web
     name: kitabuzone-backend
+    rootDir: backend
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python app.py"
+    healthCheckPath: /health
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: kitabuzone-db
           property: connectionString
 
+  - type: web
+    name: kitabuzone-ui
+    rootDir: frontend
+    env: static
+    buildCommand: "npm install && npm run build"
+    staticPublishPath: build
 databases:
   - name: kitabuzone-db
     plan: free
