--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: kitabuzone-db
+          name: kitabuzone_db
           property: connectionString
 
   - type: web
@@ -19,5 +19,5 @@ services:
     buildCommand: "npm install && npm run build"
     staticPublishPath: build
 databases:
-  - name: kitabuzone-db
+  - name: kitabuzone_db
     plan: free
